# go_api/cmd/main.go
@@ -9,7 +9,6 @@ import (
 	"time"
 
 	"github.com/Daffc/GO-Sales/api/handler"
-	"github.com/Daffc/GO-Sales/api/middleware"
 	_ "github.com/Daffc/GO-Sales/docs"
 	"github.com/Daffc/GO-Sales/internal/config"
 	"github.com/Daffc/GO-Sales/internal/database/mariadb"
@@ -60,7 +59,6 @@ func main() {
 	sm.HandleFunc("POST /users", userHandler.CreateUser)
 	sm.HandleFunc("/users", userHandler.ListUsers)
 	sm.HandleFunc("/users/{userId}", userHandler.FindUserById)
-	sm.Handle("POST /users/{userId}/password", middleware.NewJwtAuthenticator(userHandler.UpdateUserPassword, config.Server.JwtSigningKey))
 
 	sm.HandleFunc("/swagger/", httpSwagger.WrapHandler)
 
