# go_api/docs/swagger.yaml
@@ -22,13 +22,6 @@ definitions:
       updated_at:
         type: string
     type: object
-  dto.UpdateUserPasswordInputDTO:
-    properties:
-      id:
-        type: integer
-      password:
-        type: string
-    type: object
   dto.UserInputDTO:
     properties:
       email:
@@ -155,35 +148,6 @@ paths:
           schema:
             type: string
       summary: Recover user by userId.
-      tags:
-      - Users
-  /users/{userId}/password:
-    post:
-      consumes:
-      - application/json
-      description: Update user password.
-      parameters:
-      - description: User ID
-        in: path
-        name: userId
-        required: true
-        type: integer
-      - description: New user Password
-        in: body
-        name: input
-        required: true
-        schema:
-          $ref: '#/definitions/dto.UpdateUserPasswordInputDTO'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      summary: Update user password.
       tags:
       - Users
 schemes:
